--- a/package.json
+++ b/package.json
@@ -9,25 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@shadcn/ui": "^0.0.4",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.3.0",
+    "@types/cheerio": "^0.22.35",
     "async-mutex": "^0.5.0",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
+    "gsap": "^3.12.5",
     "lucide-react": "^0.468.0",
     "mapbox-gl": "^3.8.0",
     "next": "15.0.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.2.0",
     "react-map-gl": "^7.1.7"
   },
   "devDependencies": {
+    "@types/html2canvas": "^1.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5"
   }
 }
