--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.2.0",
-    "react-map-gl": "^7.1.7"
+    "react-map-gl": "^7.1.7",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@types/html2canvas": "^1.0.0",
