--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
+    "@prisma/client": "^6.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.2",
     "@shadcn/ui": "^0.0.4",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.3.0",
     "@types/cheerio": "^0.22.35",
     "async-mutex": "^0.5.0",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
@@ -25,22 +30,29 @@
     "lucide-react": "^0.468.0",
     "mapbox-gl": "^3.8.0",
     "next": "15.0.4",
+    "next-auth": "^4.24.11",
+    "prisma": "^6.1.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.2.0",
+    "react-icons": "^5.4.0",
     "react-map-gl": "^7.1.7",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/html2canvas": "^1.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
