--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prisma": "^6.1.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^19.0.0",
     "react-easy-crop": "^5.2.0",
     "react-icons": "^5.4.0",
