--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@react-google-maps/api": "^2.20.5",
     "@shadcn/ui": "^0.0.4",
     "@stripe/react-stripe-js": "^3.1.1",
@@ -28,7 +30,7 @@
     "firebase": "^11.1.0",
     "firebase-admin": "^13.0.1",
     "gsap": "^3.12.5",
-    "lucide-react": "^0.468.0",
+    "lucide-react": "^0.473.0",
     "mapbox-gl": "^3.8.0",
     "next": "15.0.4",
     "next-auth": "^4.24.11",
@@ -48,6 +50,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/html2canvas": "^1.0.0",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
