--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@aws-sdk/client-ses": "^3.743.0",
+    "@google-cloud/firestore": "^7.11.0",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-alert-dialog": "^1.1.5",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
     "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-google-maps/api": "^2.20.5",
     "@shadcn/ui": "^0.0.4",
@@ -44,6 +47,7 @@
     "mapbox-gl": "^3.8.0",
     "next": "15.0.4",
     "next-auth": "^4.24.11",
+    "papaparse": "^5.5.2",
     "prisma": "^6.1.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
@@ -62,6 +66,7 @@
     "@types/html2canvas": "^1.0.0",
     "@types/lodash": "^4.17.14",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
