--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@react-email/components": "^0.0.33",
+    "@react-email/render": "^1.0.5",
     "@react-google-maps/api": "^2.20.5",
     "@shadcn/ui": "^0.0.4",
     "@stripe/react-stripe-js": "^3.1.1",
@@ -57,6 +59,7 @@
     "react-icons": "^5.4.0",
     "react-map-gl": "^7.1.7",
     "recharts": "^2.15.0",
+    "resend": "^4.1.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "use-places-autocomplete": "^4.0.1"
