--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
-    "@aws-sdk/client-ses": "^3.743.0",
+    "@aws-sdk/client-ses": "^3.750.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@google-cloud/firestore": "^7.11.0",
@@ -68,6 +68,7 @@
     "react-map-gl": "^7.1.7",
     "recharts": "^2.15.0",
     "resend": "^4.1.2",
+    "stripe": "^17.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "use-places-autocomplete": "^4.0.1"
@@ -80,6 +81,7 @@
     "@types/papaparse": "^5.3.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/stripe": "^8.0.417",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
