--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "mapbox-gl": "^3.8.0",
     "next": "15.0.4",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.4",
     "papaparse": "^5.5.2",
     "prisma": "^6.1.0",
     "qrcode.react": "^4.2.0",
@@ -70,6 +71,7 @@
     "react-map-gl": "^7.1.7",
     "recharts": "^2.15.0",
     "resend": "^4.1.2",
+    "sonner": "^2.0.1",
     "stripe": "^17.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
