--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.473.0",
     "mapbox-gl": "^3.8.0",
-    "next": "15.0.4",
+    "next": "^15.2.1",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "papaparse": "^5.5.2",
