--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@types/cheerio": "^0.22.35",
+    "@vercel/analytics": "^1.5.0",
     "async-mutex": "^0.5.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
